Replace constant charset String literal  "UTF-8" with the predefined StandardCharsets.UTF_8 code.